# bevy_jam_3

./: .gitignore  Cargo.toml  README.md  run.sh
.cargo/: config.toml
assets/shaders/: gi_post_processing.wgsl
src/: asset.rs  camera.rs  construct.rs  day_night.rs  ecs.rs  item.rs  main.rs  map.rs  physics.rs  player.rs  stats.rs
src/entities/: mod.rs
src/map/: gen.rs  mod.rs
src/sprite/: mod.rs  pipeline.rs
src/sprite/render/: sprite.wgsl
