[package]
name = "bevy_jam_3"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10"
bevy_ecs_tilemap = "0.10.0"
enum-map = "2.5.0"
leafwing-input-manager = "0.9.1"
rand = "0.8.5"
seldom_fn_plugin = "0.3.0"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
debug = true
incremental = true

[profile.dev]
codegen-units = 16
opt-level = 0
debug = true
incremental = true
