[package]
name = "bevy_jam_3"
version = "0.1.0"
edition = "2021"

[features]
editor = ["bevy_editor_pls"]

[dependencies]
bevy = "0.10"
bevy_ecs_tilemap = { git = "https://github.com/IsseW/bevy_ecs_tilemap", features = ["lights", "atlas"] }
bevy_editor_pls = { version = "0.4.0", optional = true }
bevy_kira_audio = "0.15.0"
bitmatch = "0.1.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
enum-map = "2.5.0"
fixedbitset = "0.4.2"
leafwing-input-manager = "0.9.1"
rand = { version = "0.8.5", features = ["small_rng"] }
seldom_fn_plugin = "0.3.0"
vek = "0.15.10"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
debug = true
incremental = true

[profile.dev]
codegen-units = 16
opt-level = 1
debug = true
incremental = true
